fix background light circles sizes to remove horizontal scroll on devices screen width < 1200px

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -291,6 +291,8 @@
             }
 
             .light-circle-two {
+              width: 30vw;
+              height: 40vw;
               left: 50vw;
               top: 40vh;
             }
@@ -315,6 +317,8 @@
           }
 
           .light-circle-two {
+            width: 50vw;
+            height: 50vw;
             left: 38.476190476190476vw;
             top: 25.166666666666667vh;
           }
